--- a/NewLab1/Pages/OfficeHourSch/OfficeHourPageTeacher.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/OfficeHourPageTeacher.cshtml
@@ -1,4 +1,4 @@
-﻿@page 
+﻿@page "{FacultyID}"
 @using System.Data.SqlClient;
 @using NewLab1.Pages.DB;
 @model NewLab1.Pages.OfficeHourSch.OfficeHourPageTeacherModel
@@ -19,12 +19,11 @@
         <table class="table table-bordered table-responsive table-hover">
             <thead>
                 <tr>
-                    <th>Office Hour ID</th>
                     <th>Office Number:</th>
                     <th>Date: </th>
                     <th>Time: </th>
-                    <th>Faculty ID:</th>
                     <th>Student Name:</th>
+                    <th>             </th>
                 </tr>
             </thead>
             <tbody>
@@ -39,13 +38,11 @@
                     foreach (var officeHours in Model.Hours)
                     {
                         <tr>
-                            <td class="text-danger">@officeHours.FacultyID</td>
-                            <td>@officeHours.OfficeNumber</td>
+                            <td class="text-danger">@officeHours.OfficeNumber</td>       
                             <td>@officeHours.Date</td>
                             <td>@officeHours.Time</td>
-                            <td>@officeHours.FacultyID</td>
                             <td>@officeHours.StudentName</td>
-                            
+                            <td> <a asp-page="EditStudents" class="btn btn-primary" asp-route-officehourID="@officeHours.OfficeHourID">Edit Students</a></td>
                         </tr>
                     }
                 }
