--- a/NewLab1/Pages/OfficeHourSch/OfficeHourPage.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/OfficeHourPage.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{FacultyID}"
+﻿@page 
 @model NewLab1.Pages.OfficeHourSch.OfficeHourPageModel
 @{
     <p>Phillip Ruta, Anuj Passan, Arden Barrett</p>
@@ -14,11 +14,10 @@
         <table class="table table-bordered table-responsive table-hover">
             <thead>
                 <tr>
-                    <th>Office Hour ID</th>
+                    
                     <th>Office Number:</th>
                     <th>Date: </th>
-                    <th>Time: </th>
-                    <th>Faculty ID:</th>
+                    <th>Time: </th> 
                     <th>Student Name:</th>
                 </tr>
             </thead>
@@ -30,11 +29,9 @@
                     foreach (var officeHours in Model.Hours)
                     {
                         <tr>
-                            <td class="text-danger">@officeHours.OfficeHourID</td>
-                            <td>@officeHours.OfficeNumber</td>
+                            <td class="text-danger">@officeHours.OfficeNumber</td>   
                             <td>@officeHours.Date</td>
-                            <td>@officeHours.Time</td>
-                            <td>@officeHours.FacultyID</td>
+                            <td>@officeHours.Time</td>              
                             <td>@officeHours.StudentName</td>
                             <td>
                                 <a asp-page="JoinStudents" class="btn btn-primary" asp-route-officehourID="@officeHours.OfficeHourID">Join</a>
