--- a/NewLab1/Pages/OfficeHourSch/AddOfficeHours.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/AddOfficeHours.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<form asp-page="AddProducts">
+<form asp-page="AddOfficeHourss">
     <input asp-for="NewOfficeHours.OfficeNumber" placeholder="Office Number" />
     <input asp-for="NewOfficeHours.Date" placeholder="Date" />
     <input asp-for="NewOfficeHours.Time" placeholder="Time" />
