--- a/NewLab1/Pages/OfficeHourSch/EditStudents.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/EditStudents.cshtml
@@ -1,7 +1,11 @@
-﻿@page
+﻿@page 
 @model NewLab1.Pages.OfficeHourSch.EditStudentsModel
 @{
-}
+
+ if (HttpContext.Session.GetString("username") != null)
+    {
+
+
 <form asp-page="EditStudents">
     <input type="hidden" asp-for="@Model.EditView.OfficeHourID" />
     <label asp-for="@Model.EditView.StudentName"></label>
@@ -10,3 +14,7 @@
     <input type="submit" class="btn btn-success" asp-page="EditStudents" />
     <a asp-page="OfficeHourPageTeacher" class="btn btn-secondary">Cancel</a>
 </form>
+
+    }
+
+}
