--- a/NewLab1/Pages/OfficeHourSch/OfficeHourPageTeacher.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/OfficeHourPageTeacher.cshtml
@@ -56,7 +56,12 @@
 
     <br />
             //A link to the view meetings query table
-    <p>To View the Current Meetings Scheduled Click here! <a href="http://localhost:5219/OfficeHourSch/ViewMeeting"> View Meetings</a>.</p>
+   // <p>To View the Current Meetings Scheduled Click here! <a href="http://localhost:5219/OfficeHourSch/ViewMeeting"> View Meetings</a>.</p>
+    <p>Ready to meet? </p>
+    <a id="myLink" href="http://localhost:5183/OfficeHourSch/HashedLogin" style="display:none;"></a>
+    <button type="button" class="btn btn-primary position-relative" onclick="document.getElementById('myLink').click()">
+        Notify Student
 
+    </button>
 
 }
