--- a/NewLab1/Pages/OfficeHourSch/HashedLogin.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/HashedLogin.cshtml
@@ -11,6 +11,7 @@
 </div>
 
 <form asp-page="HashedLogin">
+    <label>Enter Username:</label>
     <input asp-for="Username" class="form-control" placeholder="Enter Username" />
     <br />
     <label>Enter Password:</label>
