--- a/NewLab1/Pages/OfficeHourSch/SearchBar.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/SearchBar.cshtml
@@ -2,32 +2,44 @@
 @model NewLab1.Pages.OfficeHourSch.SearchBarModel
 @{
 }
+@{
+    if (HttpContext.Session.GetString("username") != null && HttpContext.Session.GetString("personType") == "Student")
+    {
 
-<header style="font-family: Arial, sans-serif; font-size: 24px; font-weight: bold;">
-    <h1>Search for Faculty Members' Office Hours</h1>
-    <p style="font-size: 16px; font-weight: normal;">Use the form below to search for a faculty member's office hours.</p>
-</header>
+        <header style="font-family: Arial, sans-serif; font-size: 24px; font-weight: bold;">
+            <h1>Search for Faculty Members' Office Hours</h1>
+            <p style="font-size: 16px; font-weight: normal;">Use the form below to search for a faculty member's office hours.</p>
+        </header>
 
-<form method="post">
-    <div class="form-group">
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" class="form-control" placeholder="Enter first name">
-    </div>
-    <div class="form-group">
-        <label for="lastName">Last Name:</label>
-        <input type="text" id="lastName" name="lastName" class="form-control" placeholder="Enter last name">
-    </div>
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
+        <form method="post">
+            <div class="form-group">
+                <label for="firstName">First Name:</label>
+                <input type="text" id="firstName" name="firstName" class="form-control" placeholder="Enter first name">
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last Name:</label>
+                <input type="text" id="lastName" name="lastName" class="form-control" placeholder="Enter last name">
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
 
-@if (Model.FacultyID != null)
-{
-    // Redirect to OfficeHourPage with the FacultyID
-    <script>window.location.href = "/OfficeHourPage/@Model.FacultyID";</script>
-}
+        @if (Model.FacultyID != null)
+        {
+            // Redirect to OfficeHourPage with the FacultyID
+            <script>window.location.href = "/OfficeHourPage/@Model.FacultyID";</script>
+        }
         <br />
-            
-                <p>User @HttpContext.Session.GetString("username") Logged in!</p>
-                <br />
-                <a class="btn btn-outline-primary" asp-page="/Index" asp-route-logout="true">Logout</a>
-         
+
+        <p>User @HttpContext.Session.GetString("username") Logged in!</p>
+        <br />
+        <a class="btn btn-outline-primary" asp-page="/Index" asp-route-logout="true">Logout</a>
+    }
+
+    else
+    {
+        <p>You do not have permission to access this page.</p>
+        <script>setTimeout(function () { window.location.href = '/Index'; }, 2000);</script>
+    }
+
+
+            }
