--- a/NewLab1/Pages/OfficeHourSch/StudentAccount.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/StudentAccount.cshtml
@@ -1,30 +1,12 @@
-﻿@page
+﻿@page "{StudentID}"
 @model NewLab1.Pages.OfficeHourSch.StudentAccountModel
 @{
 }
+<h1>Student Account</h1>
 
-<h2 style="color:crimson" class="h2">Student Account</h2>
-
-<table class="table table-bordered table-responsive table progress-bar-striped table-hover">
-    <thead class="table-dark">
-        <tr>
-            <th>Student First Name:</th>>
-            <th>Student Last Name:</th>>
-            <th>Username:</th>
-            <th>Email:</th>
-            <th>Phone Number:</th>
-        </tr>
-        <tr>
-            <td>Phillip</td>
-            <td>Ruta</td>
-            <td>pruta</td>
-            <td>pruta@edu.com</td>
-            <td>2024435732</td>
-        </tr>
-    </thead>
-    <tbody>
-
-
-
-
-        <h3 style="color:darkred " class="h2">You have 1 new notification: John Wall is ready to meet</h3>
+@foreach (var student in Model.StudentAccount)
+{
+    <h2>@student.FirstName @student.LastName</h2>
+    <p>Email: @student.StuEmail</p>
+    <p>Phone: @student.Phone</p>
+}
