--- a/NewLab1/Pages/OfficeHourSch/OfficeHourPageTeacher.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/OfficeHourPageTeacher.cshtml
@@ -5,6 +5,10 @@
 @{
 }
 @{
+
+    <form method="post">
+        <button class="btn btn-outline-primary" name="FacultyAccount" value="@HttpContext.Session.GetString("facultyid")">My Account</button>
+    </form>
    
 
     //testing the user is logged in to see the pages
