--- a/NewLab1/Pages/OfficeHourSch/ViewMeeting.cshtml
+++ b/NewLab1/Pages/OfficeHourSch/ViewMeeting.cshtml
@@ -1,53 +1,32 @@
-﻿@page
+﻿@page "{studentId:int}/UploadImage"
 @using NewLab1.Pages.DB;
 @using System.Data.SqlClient;
 @model NewLab1.Pages.OfficeHourSch.ViewMeetingModel
 @{
 }
 @{
-    //Used to check if the user has access to this page
-    if (HttpContext.Session.GetString("username") != null)
-    {
+    ViewData["Title"] = "Upload Image";
+}
 
-        //Changing the color of the text
-        <h2 style="color:hotpink" h2">Current Meetings Scheduled:</h2>
-        <table class="table table-bordered table-responsive table progress-bar-striped table-hover">
-            <thead class="table-dark">
-                <tr>
-                    <th>Student First Name:</th>
-                    <th>Student Last Name:</th>
-                    <th>Student Email:</th>
-                    <th>Time:</th>
-                    <th>Date:</th>
+<h1>@ViewData["Title"]</h1>
 
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    //Query to select students names and which meeting they are scheudled for
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">@TempData["ErrorMessage"]</div>
+}
 
-                    string sqlQuery = "SELECT Student.fName, Student.lName, Student.studentEmail, Meeting.timeID, Meeting.dateID FROM Meeting INNER JOIN Student ON Meeting.studentID = Student.studentID ";
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success">@TempData["Message"]</div>
+}
 
-                    SqlDataReader QueryResults = DBClass.GeneralReaderQuery(sqlQuery);
-
-                    while (QueryResults.Read())
-                    {
-                        <tr>
-                            <td>@QueryResults["fName"]</td>
-                            <td>@QueryResults["lName"]</td>
-                            <td>@QueryResults["studentEmail"]</td>
-                            <td>@QueryResults["timeID"]</td>
-                            <td>@QueryResults["dateID"]</td>
-
-
-                        </tr>
-                    }
-                    DBClass.Lab3DBConnection.Close();
-                }
-
-
-            </tbody>
-
-        </table>
-    }
+<form method="post" enctype="multipart/form-data">
+    <div class="form-group">
+        <label for="imageFile">Select an image file:</label>
+        <input type="file" class="form-control-file" id="imageFile" name="ImageFile" accept="image/*" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <a asp-page="/Student/Index" class="btn btn-secondary">Cancel</a>
+   
+</form>
 }
